// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`On region with a flower Form after error rerender still renders with regions 1`] = `
<form
  action=""
  method="POST"
>
  <label
    for="Region Name"
  >
    Region Name
  </label>
  <input
    id="Region Name"
    name="region"
    type="radio"
    value="647cbde08678de7aaf63d2ec"
  />
  <label
    for="I should be in the snapshot!"
  >
    I should be in the snapshot!
  </label>
  <input
    id="I should be in the snapshot!"
    name="region"
    type="radio"
    value="647cbdb6ec4dd230927acfdf"
  />
  <button
    type="submit"
  >
    Delete
  </button>
  <ul>
    <li>
      Region already has a flower
    </li>
  </ul>
</form>
`;

exports[`On region with a flower Renders form with error 1`] = `
<form
  action=""
  method="POST"
>
  <label
    for="Region Name"
  >
    Region Name
  </label>
  <input
    id="Region Name"
    name="region"
    type="radio"
    value="647cbde08678de7aaf63d2ec"
  />
  <button
    type="submit"
  >
    Delete
  </button>
  <ul>
    <li>
      Region already has a flower
    </li>
  </ul>
</form>
`;
